--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="%PUBLIC_URL%/ogp_image.png">
     <meta property="og:title" content="my new gear...">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=no" />
     <!-- <meta name="theme-color" content="#000000" /> -->
     <meta name="description" content="Web site created using create-react-app" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
