--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
 
   <meta property="og:title" content="my new gear...|機材共有SNS">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://mynewgear-91dc2.web.app/">
-  <meta property="og:image" content="https://mynewgear-91dc2.web.app/ogp_image.jpg">
+  <meta property="og:url" content="https://my-newgear.web.app/">
+  <meta property="og:image" content="https://my-newgear.web.app/ogp_image.jpg">
   <meta property="og:site_name" content="my new gear...">
   <meta property="og:description" content="あなたの素敵な機材を共有しませんか？ 機材共有SNS my new gear...">
   <meta name="twitter:card" content="summary_large_image">
